# caric_mission

./: CMakeLists.txt  README.md  package.xml
CARIC Original Instuctions/: Table of contents _ CARIC_ Cooperative Aerial Robots Inspection Challenge.html
demo_paths/: demo_path_changi.yaml  demo_path_jurong.yaml  demo_path_raffles.yaml  demo_path_sentosa.yaml
include/: utility.h
launch/: demo_paths.launch  run_crane.launch  run_hangar.launch  run_mbs.launch  spawn_uav.launch
launch/crane/: run_crane.launch  spawn_gcs.launch
launch/hangar/: run_hangar.launch  spawn_gcs.launch
launch/mbs/: run_mbs.launch  spawn_gcs.launch  spawn_uav.launch
logs/mbs/: score.csv
models/crane/: crane.pcd
models/crane/bounding_boxes/: box1.stl  box10.stl  box11.stl  box12.stl  box13.stl  box14.stl  box15.stl  box16.stl  box2.stl  box3.stl  box4.stl  box5.stl  box6.stl  box7.stl  box8.stl  box9.stl  box_description.yaml
models/hangar/: hangar.pcd
models/mbs/: mbs.pcd
models/mbs/bounding_boxes/: box_description.yaml
paths/crane/: crane_path_5.yaml  path5.txt
paths/hangar/: hangar_path_4.yaml  hangar_points.ipynb  path1.txt  path2.txt
paths/mbs/: mbs_path_4.yaml  mbs_path_5.yaml  mbs_points.ipynb  path3.txt  path4.txt  path5.txt
rviz/: caric_crane.rviz  caric_hangar.rviz  caric_mbs.rviz  rviz.rviz
scripts/: build_octomap.sh  generate_bonding_box.ipynb  launch_all.sh  launch_all_crane.sh  launch_all_mbs.sh  launch_crane.sh  launch_demo_paths.sh  launch_hangar.sh  launch_mbs.sh  mesh_visualizer.py  ppcom_firefly1_talker.py  ppcom_firefly2_talker.py  ppcom_firefly3_talker.py  ppcom_firefly4_talker.py  ppcom_firefly5_talker.py  ppcom_router.py  trigger.py  update_caric.sh
src/: MissionManager.cpp
worlds/: crane.world  hangar.world  mbs.world
